--- a/src/app/pages/childrens/edit-child/evaluation/edit-evaluation/edit-evaluation.component.html
+++ b/src/app/pages/childrens/edit-child/evaluation/edit-evaluation/edit-evaluation.component.html
@@ -361,10 +361,15 @@
               </label>
             </div>
 
-            <div class="file-details-container" *ngIf="selectedFileNationalID">
+            <div
+                    class="file-details-container"
+                    *ngIf="selectedFileNationalID"
+                    (click)="goToLink(selectedFileNationalID)"
+                    style="cursor: pointer"
+            >
               <div class="file-details">
-                <div class="file-name">{{ selectedFileNationalID?.name }}</div>
-                <div class="file-info">
+                <div class="file-name">{{ selectedFileNationalID?.name ?? "عرض الملف" }}</div>
+                <div class="file-info" *ngIf="selectedFileNationalID?.name">
                   <span class="file-type">{{
                     selectedFileNationalID?.type
                   }}</span>
