--- a/src/app/pages/childrens/edit-child/child-programs/edit-programs/edit-programs.component.html
+++ b/src/app/pages/childrens/edit-child/child-programs/edit-programs/edit-programs.component.html
@@ -122,6 +122,16 @@
       </div>
       <div class="row mb-6">
         <label class="col-lg-2 col-form-label required fw-bold fs-6">{{
+          "العمر" | translate
+          }} (سنة)</label>
+        <div class="col-lg-3 fv-row">
+          <input
+                  type="text"
+                  class="form-control form-control-lg form-control-solid mb-3 mb-lg-0"
+                  formControlName="age"
+          />
+        </div>
+        <label class="col-lg-2 col-form-label required fw-bold fs-6">{{
           "applyDate" | translate
           }}</label>
         <div class="col-lg-3 fv-row">
