--- a/src/app/modules/auth/components/forgot-password/forgot-password.component.html
+++ b/src/app/modules/auth/components/forgot-password/forgot-password.component.html
@@ -9,13 +9,13 @@
   <div class="text-center mb-10">
     <!--begin::Title-->
     <h1 class="text-gray-900 fw-bolder mb-3">
-        Forgot Password ?
+        نسيت كلمة المرور؟
     </h1>
     <!--end::Title-->
 
     <!--begin::Link-->
     <div class="text-gray-500 fw-semibold fs-6">
-        Enter your email to reset your password.
+        ادخل بريدك الالكتروني لاستعادة كلمة المرور
     </div>
     <!--end::Link-->
 </div>
@@ -25,7 +25,7 @@
   <ng-container *ngIf="errorState === errorStates.HasError">
     <div class="mb-lg-15 alert alert-danger">
       <div class="alert-text font-weight-bold">
-        Sorry, looks like there are some errors detected, please try again.
+        عذراً، لم يتم العثور على حساب بهذا البريد الإلكتروني
       </div>
     </div>
   </ng-container>
@@ -34,19 +34,21 @@
   <ng-container *ngIf="errorState === errorStates.NoError">
     <div class="mb-10 bg-light-info p-8 rounded">
       <!--begin::Body-->
-      <div class="text-info">Sent password reset. Please check your email</div>
+      <div class="text-info">
+        تم إرسال رابط إعادة تعيين كلمة المرور إلى بريدك الإلكتروني
+        </div>
       <!--end::Body-->
     </div>
   </ng-container>
 
   <!--begin::Form group-->
   <div class="fv-row mb-8">
-    <label class="form-label fw-bolder text-gray-900 fs-6">Email</label>
+    <label class="form-label fw-bolder text-gray-900 fs-6">البريد الإلكتروني</label>
     <input
       class="form-control bg-transparent"
       type="email"
       formControlName="email"
-      placeholder="Email"
+      placeholder="البريد الإلكتروني"
       name="email"
       autocomplete="off"
       [ngClass]="{
@@ -59,7 +61,7 @@
       [ngTemplateOutlet]="formError"
       [ngTemplateOutletContext]="{
         validation: 'required',
-        message: 'Email is required',
+        message: 'البريد الإلكتروني مطلوب',
         control: forgotPasswordForm.controls['email']
       }"
     ></ng-container>
@@ -67,7 +69,7 @@
       [ngTemplateOutlet]="formError"
       [ngTemplateOutletContext]="{
         validation: 'email',
-        message: 'Email is invalid',
+        message: 'البريد الإلكتروني غير صالح',
         control: forgotPasswordForm.controls['email']
       }"
     ></ng-container>
@@ -75,7 +77,7 @@
       [ngTemplateOutlet]="formError"
       [ngTemplateOutletContext]="{
         validation: 'minLength',
-        message: 'Email should have at least 3 symbols',
+        message: 'البريد الإلكتروني يجب أن يحتوي على 3 أحرف على الأقل',
         control: forgotPasswordForm.controls['email']
       }"
     ></ng-container>
@@ -83,7 +85,7 @@
       [ngTemplateOutlet]="formError"
       [ngTemplateOutletContext]="{
         validation: 'maxLength',
-        message: 'Email should have maximum 360 symbols',
+        message: 'البريد الإلكتروني يجب أن يحتوي على 320 حرفًا كحد أقصى',
         control: forgotPasswordForm.controls['email']
       }"
     ></ng-container>
@@ -96,10 +98,10 @@
       id="kt_password_reset_submit"
       class="btn btn-primary me-4"
     >
-      <span class="indicator-label">Submit</span>
+      <span class="indicator-label">إرسال</span>
       <ng-container *ngIf="isLoading$ | async">
         <span class="indicator-progress">
-          Please wait...
+          الرجاء الانتظار...
           <span
             class="spinner-border spinner-border-sm align-middle ms-2"
           ></span>
@@ -111,7 +113,7 @@
       id="kt_login_password_reset_form_cancel_button"
       class="btn btn-light"
     >
-      Cancel
+        الغاء
     </a>
   </div>
   <!--end::Form group-->
