Add child evaluation and reporting features with Excel/PDF export

--- a/src/app/_metronic/partials/layout/extras/dropdown-inner/user-inner/user-inner.component.html
+++ b/src/app/_metronic/partials/layout/extras/dropdown-inner/user-inner/user-inner.component.html
@@ -98,7 +98,7 @@
 
   <!-- <div class="separator my-2"></div> -->
 
-  <div
+  <!-- <div
     class="menu-item px-5"
     data-kt-menu-trigger="hover"
     data-kt-menu-placement="left-start"
@@ -147,7 +147,7 @@
         </a>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <!-- <div class="menu-item px-5 my-1">
     <a routerLink="/crafted/account/settings" class="menu-link px-5">
