--- a/src/app/pages/questions/edit-question/edit-question.component.html
+++ b/src/app/pages/questions/edit-question/edit-question.component.html
@@ -36,6 +36,23 @@
           </div>
           <div class="row mb-6">
             <label class="col-lg-2 col-form-label required fw-bold fs-6">{{
+              "category" | translate
+              }}</label>
+            <div class="col-lg-8 fv-row">
+              <select
+                      class="form-select form-select-solid form-select-lg"
+                      name="category"
+                      formControlName="category_id"
+              >
+                <option [value]="null">{{ "selectCategory" | translate }}</option>
+                <option *ngFor="let category of categories" [value]="category.id">
+                  {{ category.name }}
+                </option>
+              </select>
+            </div>
+          </div>
+          <div class="row mb-6">
+            <label class="col-lg-2 col-form-label required fw-bold fs-6">{{
               "type" | translate
             }}</label>
             <div class="col-lg-6 fv-row">
